# natrixcc

./: .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: ir.yml  (+1 more)
fir/: Cargo.toml  README.md
fir/crates/back/: Cargo.toml
fir/crates/back/src/: emu.rs  lib.rs
fir/crates/back/src/codegen/: mod.rs
fir/crates/back/src/codegen/isa/: mod.rs
fir/crates/back/src/codegen/isa/x86_64/: asm.rs  mod.rs
fir/crates/back/src/codegen/machine/: abi.rs  asm.rs  mod.rs
fir/crates/back/src/codegen/machine/abi/: calling_convention.rs  mod.rs
fir/crates/back/src/codegen/machine/module/: builder.rs  mod.rs
fir/crates/back/src/codegen/register_allocator/: coalescer.rs  linear_scan.rs  mod.rs
fir/crates/back/src/codegen/selection_dag/: builder.rs  mod.rs
fir/crates/compiler/: Cargo.toml
fir/crates/compiler/src/: main.rs
fir/crates/core/: Cargo.toml
fir/crates/core/src/: lib.rs  test_utils.rs  ty.rs
fir/crates/core/src/codegen/isa/: mod.rs
fir/crates/core/src/codegen/isa/x86_64/: asm.rs
fir/crates/core/src/codegen/machine/: mod.rs
fir/crates/core/src/codegen/register_allocator/: greedy.rs
fir/crates/core/src/codegen/selection_dag/: builder.rs  mod.rs
fir/crates/core/src/middle/: instruction.rs  mod.rs
fir/crates/core/src/middle/analysis/: mod.rs
fir/crates/core/src/middle/analysis/dataflow/: concrete_value.rs
fir/crates/core/src/middle/optimization/: mod.rs
fir/crates/core/src/middle/optimization/basic_block_pass/: constant_fold.rs  copy_propagation.rs  cse.rs
fir/crates/front/: Cargo.toml
fir/crates/front/src/: grammar.lalrpop  grammar.rs  module.rs
fir/crates/frontend/: .gitignore  Cargo.toml
fir/crates/frontend/src/: grammar.lalrpop  grammar.rs  lib.rs  module.rs
fir/crates/middle/: Cargo.toml
fir/crates/middle/src/: front_bridge.rs  function.rs  instruction.rs  lib.rs  module.rs  test.rs  ty.rs
fir/crates/middle/src/analysis/dataflow/: concrete_value.rs  dead_code.rs  lattice.rs  mod.rs
fir/crates/middle/src/cfg/: builder.rs  domtree.rs  mod.rs
fir/crates/middle/src/optimization/: mod.rs
fir/crates/middle/src/optimization/basic_block_pass/: constant_fold.rs  copy_propagation.rs  cse.rs  mod.rs  trivial_phi_elim.rs
fir/crates/middle/src/optimization/function_pass/: constant_propagation.rs  dead_code_elimination.rs  mod.rs
fir/examples/: arithmetic.fir  control-flow.fir
fir/src/: cfg.rs  cfg_builder.rs  function.rs  instruction.rs  lib.rs  module.rs  test_utils.rs
fir/src/analysis/dataflow/: concrete_value.rs  lattice.rs  mod.rs
fir/src/codegen/isa/: mod.rs
fir/src/codegen/isa/x86_64/: mod.rs
fir/src/codegen/machine/: mod.rs
fir/src/codegen/register_allocator/: greedy.rs  mod.rs
fir/src/codegen/x86_64/: asm.rs  function_builder.rs  mod.rs  module_builder.rs  register_allocator.rs
fir/src/middle/: function.rs  module.rs
fir/src/middle/analysis/dataflow/: mod.rs
fir/src/middle/cfg/: builder.rs  mod.rs
fir/src/middle/optimization/basic_block_pass/: mod.rs  trivial_phi_elim.rs
fir/src/middle/optimization/function_pass/: dead_code_elimination.rs  mod.rs
fir/src/middle/optimization/function_pass/cfg_simplify/: mod.rs  unreachable_bb_elim.rs
fir/src/optimization/: mod.rs
fir/src/optimization/basic_block_pass/: constant_fold.rs  copy_propagation.rs  cse.rs  mod.rs  trivial_phi_elim.rs
fir/src/optimization/function_pass/: constant_propagation.rs  dead_code_elimination.rs  mod.rs
fir/src/optimization/function_pass/cfg_simplify/: bb_merge.rs  jump_threading.rs  mod.rs  unreachable_bb_elim.rs
fir/src/parser/: grammar.lalrpop  mod.rs
fusion-compiler/: Cargo.toml
fusion-compiler/fir/src/: cfg.rs  cfg_builder.rs  function.rs  instruction.rs  lib.rs  ty.rs
fusion-compiler/fir/src/codegen/x86_64/: mod.rs
fusion-compiler/fir/src/optimization/: mod.rs
fusion-compiler/fir/src/optimization/basic_block_pass/: constant_fold.rs  mod.rs
fusion-compiler/src/: compilation_unit.rs  lib.rs  main.rs
fusion-compiler/src/ast/: evaluator.rs  lexer.rs  mod.rs  parser.rs  printer.rs  visitor.rs
fusion-compiler/src/codegen/: mod.rs
fusion-compiler/src/codegen/c/: transpiler.rs
fusion-compiler/src/diagnostics/: mod.rs  printer.rs
fusion-compiler/src/hir/: builder.rs  mod.rs  writer.rs
fusion-compiler/src/lir/: builder.rs  mod.rs
fusion-compiler/src/mir/: basic_block.rs  builder.rs  mod.rs  writer.rs
fusion-compiler/src/mir/optimizations/: mod.rs
fusion-compiler/src/mir/optimizations/global/: branch_elimination.rs  dead_code_elimination.rs  mod.rs
fusion-compiler/src/mir/optimizations/local/: algebraic_simplification.rs  constants_folding.rs  copy_propagation.rs  mod.rs
fusion-compiler/src/text/: mod.rs  span.rs
fusion-compiler/src/typings/: mod.rs
ir/: .gitignore  Cargo.toml  README.md  rustfmt.toml
ir/crates/back/: Cargo.toml
ir/crates/back/src/: emu.rs  lib.rs
ir/crates/back/src/codegen/: mod.rs
ir/crates/back/src/codegen/isa/: mod.rs
ir/crates/back/src/codegen/machine/: asm.rs  backend.rs  instr.rs  isa.rs  mod.rs  reg.rs
ir/crates/back/src/codegen/register_allocator/: coalescer.rs  linear_scan.rs  mod.rs
ir/crates/back/src/codegen/selection_dag/: builder.rs  mod.rs
ir/crates/back/src/codegen/targets/: mod.rs
ir/crates/compiler/: Cargo.toml
ir/crates/compiler/src/: main.rs
ir/crates/front/: Cargo.toml
ir/crates/front/src/: grammar.lalrpop  grammar.rs  lib.rs  module.rs
ir/crates/middle/: Cargo.toml
ir/crates/middle/src/: front_bridge.rs  function.rs  instruction.rs  lib.rs  module.rs  test.rs  ty.rs  verifier.rs
ir/crates/middle/src/analysis/dataflow/: backward.rs  concrete_value.rs  dead_code.rs  forward.rs  lattice.rs  mod.rs  use_def.rs
ir/crates/middle/src/cfg/: builder.rs  cfg.md  domtree.rs  mod.rs
ir/crates/middle/src/optimization/: mod.rs  optimization_doc_template.md
ir/crates/middle/src/optimization/basic_block_pass/: constant_fold.rs  copy_propagation.rs  cse.rs  mod.rs
ir/crates/middle/src/optimization/function_pass/: constant_propagation.rs  dead_code_elimination.rs  mod.rs
ir/examples/: arithmetic.nx  control-flow.nx  use-before-def.nx
(+67 files in other folders)
