[workspace]
resolver = "2"
members = [
    "ir/crates/back",
    "ir/crates/compiler",
    "ir/crates/front",
    "ir/crates/middle",
    "lang"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


