[package]
name = "fir"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index_vec = "0.1.3"
tracing = "0.1.40"
iced-x86 = { version = "1.20.0", features = ["code_asm"] }
rustc-hash = "1.1.0"
lalrpop-util = { version = "0.20.0" , features = ["lexer", "unicode"] }
strum = { version = "0.25" ,features = ["derive"]}
strum_macros = "0.25"
iter_tools = "0.4.0"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer", "unicode"] }
