workspace = { members = ["fir"] }
[package]
name = "fusion-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
iced-x86 = { version = "1.20.0" , features = ["code_asm"]}
itertools = "0.12.0"
serial_test = "2.0.0"
termion = "2.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
