[package]
name = "firc_core"
version = "0.1.0"
edition = "2021"

[dependencies]
index_vec = "0.1.3"
tracing = "0.1.40"
iced-x86 = { version = "1.20.0", features = ["code_asm"] }
rustc-hash = "1.1.0"
strum = { version = "0.26.1",features = ["derive"]}
strum_macros = "0.26.1"
iter_tools = "0.4.0"
daggy = "0.8.0"
smallvec = "1.13.1"
tracing-test = "0.2.4"
log = "0.4.20"


