[package]
name = "firc_middle"
version = "0.1.0"
edition = "2021"

[dependencies]
index_vec = "0.1.3"
tracing = "0.1.40"
rustc-hash = "1.1.0"
strum = { version = "0.26.1",features = ["derive"]}
strum_macros = "0.26.1"
tracing-test = "0.2.4"
slotmap = "1.0.7"
petgraph = "0.6.4"
smallvec = "1.13.1"
firc_front = { path = "../front" }
