[package]
name = "natrix_middle"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
rustc-hash = "1.1.0"
strum = { version = "0.26.1",features = ["derive"]}
strum_macros = "0.26.1"
tracing-test = "0.2.4"
petgraph = "0.6.4"
smallvec = "1.13.1"
natrix_front = { path = "../front" }
cranelift-entity = "0.105.2"
log = "0.4.20"
index_vec = "0.1.3"
thiserror = "1.0.58"
