[package]
name = "natrix_middle"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
rustc-hash = "1.1.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tracing-test = "0.2.4"
petgraph = "0.6.4"
smallvec = "1.13.1"
natrix_front = { path = "../front" }
log = "0.4.20"
slotmap = "1.0.7"
fxindexmap = { path = "../../../crates/fxindexmap" }
itertools = "0.13.0"
derive_more = "0.99.18"
